Extract CatalogService port; rename tool package to mcp
Refactor to a ports-and-adapters shape so the catalog logic stops
being coupled to the MCP transport:

- New CatalogService interface + DefaultCatalogService implementation
  in catalog/service/. The service carries all the business logic —
  graph traversal, blast-radius aggregation, DTO mapping, pagination
  normalization — and knows nothing about MCP, HTTP, or Jackson.
- Rename catalog/tool/ to catalog/mcp/ and slim CatalogTools to a thin
  MCP adapter: each @ToolMethod is a one-liner that delegates to
  CatalogService. The adapter carries only MCP concerns (tool names,
  titles, parameter schemas, optional-arg handling).
- Tests split along the seam:
  - DefaultCatalogServiceTest mocks the three repositories and owns
    the business-logic coverage (lookup, filtering, BFS traversal with
    cycle handling, blast-radius aggregation, orphans, deprecated-in-
    use, pagination normalization).
  - CatalogToolsTest mocks CatalogService and verifies each tool
    delegates correctly — demonstrating how trivially testable a thin
    adapter is once the logic lives behind a port.

A future REST adapter would go in catalog/web/ with the same thin
shape over the same CatalogService.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>